# datadock

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/datadock/: __init__.py  _reader.py  _schema_manager.py  api.py
tests/: conftest.py  test_api.py  test_databricks.py  test_normalize_path.py  test_reader.py  test_schema_manager.py
