[tool.poetry]
name = "datadock"
version = "0.1.2"
description = ""
authors = ["Otavio Oliveira <https://www.linkedin.com/in/otavioexe/>"]
readme = "README.md"
packages = [{include = "datadock", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
pyspark = "^3.5.5"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"
pyyaml = "^6.0.2"
pyarrow = "^20.0.0"
fastavro = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"